# search-mcp

./: README.md  pyproject.toml
src/search_mcp/: __init__.py  main.py
tests/: __init__.py  test_main.py
